# action-chess

./: Cargo.toml  README.md
.devcontainer/: Dockerfile  devcontainer.json  setup.sh
.github/workflows/: rust.yml
chess_client/: Cargo.toml
chess_client/src/: lib.rs
network/: Cargo.toml
network/src/: command.rs  constants.rs  lib.rs  marshal.rs  unmarshal.rs
network/src/tests/: marshal.rs  mod.rs  unmarshal.rs
server/: Cargo.toml  lib.rs  main.rs
server/handlers/: commands.rs  handler.rs  mod.rs  moves.rs
server/src/: game.rs  lib.rs  main.rs
server/world/: game.rs  mod.rs  state.rs  world_state.rs
src/: lib.rs  main.rs
src/client/: utils.rs
src/components/app-root/: app-root.tsx
src/helpers/: game.rs
src/lib/: board.ts  grid.ts
src/lib/pieces/: index.ts  pawn.ts  piece.ts
src/lib/player/: player.ts
src/network/: Cargo.toml  command.rs  constants.rs  game_command.rs  marshal.rs  mod.rs  unmarshal.rs
src/network/src/: command.rs  constants.rs  lib.rs  marshal.rs  unmarshal.rs
src/network/tests/: deserialize.rs  marshal.rs  serialize.rs  unmarshal.rs
src/server/: game.rs  mod.rs  world.rs
src/state/: board.rs  coordinate.rs  gamestate.rs  mod.rs  movegen.rs  piece.rs  square.rs
src/state/src/: lib.rs  movegen.rs  piece.rs
src/state/src/tests/: board.rs
src/state/tests/: board.rs  movegen.rs
state/: Cargo.toml
state/src/: board.rs  cooldowns.rs  coordinate.rs  lib.rs  movegen.rs  piece.rs  square.rs
state/src/tests/: board.rs  mod.rs  movegen.rs
test_client/: Cargo.toml
test_client/src/: commands.rs  game_loop.rs  input_loop.rs  main.rs  parse_input.rs
tui-client/: Cargo.toml  main.rs
