[package]
name = "action-chess"
version = "0.1.0"
edition = "2021"

[dependencies]
colored = "2.0.4"
threadpool = "1.8.1"
network = {path = "network/" }
state = {path = "state/" }

[workspace.package]
authors = ["Damoon Rashidi"]
edition = "2021"
license = "MIT"
repository = "https://github.com/damoonrashidi/action_chess"

[workspace]
resolver = "2"
members = [
    "state",
    "network",
    "server",
]

[workspace.lints.clippy]
all = "deny"
pedantic = "deny"

[workspace.lints.rust]
unsafe_code = "forbid"
dead_code = "deny"
unused_variables = "deny"
unused_imports = "deny"
unused_import_braces = "deny"
missing_debug_implementations = "deny"
unreachable_pub = "deny"


[[bin]]
name = "chess-server"
path = "server/main.rs"
