[package]
name = "action-chess"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.75"
clap = { version = "4.4.8", features = ["derive"] }
network = {path = "network/" }
state = {path = "state/" }
chess_client = {path = "chess_client/"}

[workspace]
members = [
    "state",
    "network",
    "server",
    "chess_client",
    "test_client"
]

[workspace.dependencies]
anyhow = "1.0.75"
colored = "2.0.4"
threadpool = "1.8.1"
clap = "4.4.8"

[workspace.package]
authors = ["Damoon Rashidi"]
edition = "2021"
license = "MIT"
repository = "https://github.com/damoonrashidi/action-chess/"


[workspace.lints.clippy]
all = "deny"
pedantic = "deny"

[workspace.lints.rust]
unsafe_code = "forbid"
dead_code = "deny"
unused_variables = "deny"
unused_imports = "deny"
unused_import_braces = "deny"
missing_debug_implementations = "deny"
unreachable_pub = "deny"


[[bin]]
name = "game_server"
path = "server/main.rs"

[[bin]]
name = "debug_client"
path = "test_client/src/main.rs"
