[package]
name = "test-client"
version = "0.1.0"
authors.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
anyhow = { workspace = true }
clap = { workspace = true }
chess_client = { path = "../chess_client" }
state = { path = "../state" }

[lints]
workspace = true
